[tool.poetry]
name = "pyspark-exploration"
version = "0.1.0"
description = "exploration for pyspark within Brewery DWH"
authors = ["AiPunk <johannes.forster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
